--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+scala_beginners_exp.iml
+.idea
 
 # User-specific stuff:
 .idea/**/workspace.xml
